--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "@tailwindcss/ui": "^0.7.2",
-    "next": "10.0.1",
+    "next": "^11.1.2",
     "postcss-preset-env": "^6.7.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "tailwindcss": "^1.9.6"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.3.4",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.9"
   }
 }
