--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "^11.1.2",
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.4",
