--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^2.30.3",
+    "@apollo/client": "^3.4.16",
+    "@next-auth/prisma-adapter": "^0.5.2-next.19",
+    "@prisma/client": "^3.4.1",
     "@tailwindcss/ui": "^0.7.2",
+    "@types/react": "^17.0.34",
     "next": "^11.1.2",
+    "next-auth": "^4.0.0-beta.6",
+    "nexus": "^1.1.0",
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -19,7 +24,8 @@
   "devDependencies": {
     "autoprefixer": "^10.3.4",
     "postcss": "^8.3.6",
-    "prisma": "^2.30.3",
-    "tailwindcss": "^2.2.9"
+    "prisma": "^3.4.1",
+    "tailwindcss": "^2.2.9",
+    "typescript": "^4.4.4"
   }
 }
