--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "@headlessui/react": "^1.4.1",
     "@next-auth/prisma-adapter": "^0.5.2-next.19",
     "@prisma/client": "^3.4.1",
+    "@tailwindcss/forms": "^0.3.4",
     "@tailwindcss/ui": "^0.7.2",
     "@types/react": "^17.0.34",
-    "next": "^11.1.2",
+    "apollo-server-micro": "^3.5.0",
+    "next": "^12.0.3",
     "next-auth": "^4.0.0-beta.6",
     "nexus": "^1.1.0",
     "postcss-preset-env": "^6.7.0",
@@ -23,6 +27,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.3.4",
+    "eslint": "7.32.0",
+    "eslint-config-next": "^12.0.3",
     "postcss": "^8.3.6",
     "prisma": "^3.4.1",
     "tailwindcss": "^2.2.9",
