--- a/package.json
+++ b/package.json
@@ -8,18 +8,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.8.1",
+    "apollo-server-micro": "^3.6.2",
+    "graphql-scalars": "^1.14.1",
+    "micro-cors": "^0.1.1",
     "next": "12.0.9",
+    "nexus": "^1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.13",
+    "@types/micro-cors": "^0.1.2",
+    "@types/node": "^17.0.13",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
     "postcss": "^8.4.5",
+    "prisma": "^3.8.1",
     "tailwindcss": "^3.0.18",
-    "typescript": "4.5.5"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
   }
 }
