--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.8",
     "@prisma/client": "^3.8.1",
     "apollo-server-micro": "^3.6.2",
+    "graphql": "^16.3.0",
     "graphql-scalars": "^1.14.1",
     "micro-cors": "^0.1.1",
     "next": "12.0.9",
