--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "prisma generate"
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
     "@prisma/client": "^3.8.1",
     "apollo-server-micro": "^3.6.2",
-    "graphql": "^16.3.0",
-    "graphql-scalars": "^1.14.1",
+    "graphql": "^15.8.0",
     "micro-cors": "^0.1.1",
     "next": "12.0.9",
     "nexus": "^1.2.0",
