--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^3.8.1",
     "@tailwindcss/forms": "^0.4.0",
     "apollo-server-micro": "^3.6.2",
+    "date-fns": "^2.28.0",
     "graphql": "^15.8.0",
     "micro-cors": "^0.1.1",
     "next": "12.0.9",
