--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
+    "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.8.1",
     "@tailwindcss/forms": "^0.4.0",
+    "@types/next-auth": "^3.15.0",
     "apollo-server-micro": "^3.6.2",
     "date-fns": "^2.28.0",
     "graphql": "^15.8.0",
     "micro-cors": "^0.1.1",
     "next": "12.0.9",
+    "next-auth": "^4.1.2",
     "nexus": "^1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
