--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "@types/next-auth": "^3.15.0",
     "apollo-server-micro": "^3.6.2",
+    "csv-parse": "^5.0.4",
     "date-fns": "^2.28.0",
     "graphql": "^15.8.0",
     "micro-cors": "^0.1.1",
