--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next-auth": "^4.1.2",
     "nexus": "^1.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-toastify": "^8.1.0"
   },
   "devDependencies": {
     "@types/micro-cors": "^0.1.2",
