--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "csv-parse": "^5.0.4",
     "date-fns": "^2.28.0",
     "graphql": "^15.8.0",
+    "ics": "^2.35.0",
     "micro-cors": "^0.1.1",
     "next": "12.0.9",
     "next-auth": "^4.1.2",
