--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nexus": "^1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-toastify": "^8.1.0"
   },
   "devDependencies": {
