--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "next start",
     "lint": "next lint",
     "generate": "prisma generate",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
@@ -30,15 +31,19 @@
     "react-toastify": "^8.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "^17.0.13",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
+    "jest": "^27.4.7",
     "postcss": "^8.4.5",
     "prisma": "^3.8.1",
     "tailwindcss": "^3.0.18",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   }
