--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-toastify": "^8.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@types/micro-cors": "^0.1.2",
