add workbench.colorCustomizations to .vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,8 @@
-{}
+{
+  "workbench.colorCustomizations": {
+    "titleBar.activeForeground": "#312e81",
+    "titleBar.inactiveForeground": "#312e81CC",
+    "titleBar.activeBackground": "#6366f1",
+    "titleBar.inactiveBackground": "#6366f1CC"
+  }
+}
