--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "graphql": "^15.8.0",
     "ics": "^2.35.0",
     "micro-cors": "^0.1.1",
-    "next": "12.0.9",
+    "next": "^12.0.9",
     "next-auth": "^4.1.2",
     "nexus": "^1.2.0",
     "react": "17.0.2",
@@ -38,8 +38,8 @@
     "@types/node": "^17.0.13",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.2",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.9",
+    "eslint": "^8.8.0",
+    "eslint-config-next": "^12.0.9",
     "jest": "^27.4.7",
     "postcss": "^8.4.5",
     "prisma": "^3.8.1",
