--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@testing-library/react": "^12.1.2",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "^17.0.13",
-    "@types/react": "17.0.38",
+    "@types/react": "^17.0.38",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.8.0",
     "eslint-config-next": "^12.0.9",
