--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@next-auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^3.8.1",
     "@tailwindcss/forms": "^0.4.0",
+    "@tiptap/react": "^2.0.0-beta.107",
+    "@tiptap/starter-kit": "^2.0.0-beta.181",
     "@types/next-auth": "^3.15.0",
     "apollo-server-micro": "^3.6.2",
     "csv-parse": "^5.0.4",
