--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "micro-cors": "^0.1.1",
     "next": "^12.0.9",
     "next-auth": "^4.1.2",
+    "next-pwa": "^5.4.4",
     "nexus": "^1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
