--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "csv-parse": "^5.0.4",
     "date-fns": "^2.28.0",
     "graphql": "^15.8.0",
+    "graphql-scalars": "^1.14.1",
     "ics": "^2.35.0",
     "micro-cors": "^0.1.1",
     "next": "^12.0.9",
