--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nexus": "^1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-gtm-module": "^2.0.11",
     "react-icons": "^4.3.1",
     "react-toastify": "^8.1.0"
   },
@@ -41,6 +42,7 @@
     "@types/micro-cors": "^0.1.2",
     "@types/node": "^17.0.13",
     "@types/react": "^17.0.38",
+    "@types/react-gtm-module": "^2.0.1",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.8.0",
     "eslint-config-next": "^12.0.9",
