--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.3.1",
+    "react-simple-pull-to-refresh": "^1.3.0",
     "react-toastify": "^8.1.0"
   },
   "devDependencies": {
