--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "next lint",
     "generate": "prisma generate",
     "postinstall": "prisma generate",
-    "test": "jest --watch"
+    "test": "jest"
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
