--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "graphql": "^16.5.0",
     "graphql-scalars": "^1.17.0",
     "ics": "^2.35.0",
+    "micro": "^9.4.1",
     "micro-cors": "^0.1.1",
     "next": "^12.2.0",
     "next-auth": "^4.7.0",
