--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.9.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@tiptap/pm": "^2.0.0-beta.217",
     "@tiptap/react": "^2.0.0-beta.209",
     "@tiptap/starter-kit": "^2.0.0-beta.209",
     "apollo-server-micro": "^3.10.3",
