--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.9",
+    "@headlessui/react": "^1.7.13",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.10.1",
     "@tailwindcss/forms": "^0.5.3",
