--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "eslint": "^8.35.0",
     "eslint-config-next": "^13.2.1",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
     "prettier-plugin-organize-imports": "^3.2.2",
+    "prettier-plugin-tailwindcss": "^0.2.6",
     "tailwindcss": "^3.2.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3",
