--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@apollo/client": "^3.7.9",
     "@headlessui/react": "^1.7.13",
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/bundle-analyzer": "^13.2.4",
     "@prisma/client": "^4.10.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tiptap/pm": "^2.0.0-beta.219",
