--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
-    "react-icons": "^4.7.1",
-    "react-toastify": "^9.1.1"
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
