--- a/package.json
+++ b/package.json
@@ -13,58 +13,58 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.9",
-    "@headlessui/react": "^1.7.13",
-    "@next-auth/prisma-adapter": "^1.0.5",
-    "@next/bundle-analyzer": "^13.2.4",
-    "@prisma/client": "^4.10.1",
+    "@apollo/client": "^3.7.17",
+    "@headlessui/react": "^1.7.15",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@next/bundle-analyzer": "^13.4.9",
+    "@prisma/client": "^5.0.0",
     "@tailwindcss/forms": "^0.5.3",
-    "@tiptap/pm": "^2.0.0-beta.219",
-    "@tiptap/react": "^2.0.0-beta.219",
-    "@tiptap/starter-kit": "^2.0.0-beta.219",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/react": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
     "apollo-server-micro": "^3.10.3",
-    "csv-parse": "^5.3.5",
-    "date-fns": "^2.29.3",
-    "graphql": "^16.6.0",
-    "graphql-scalars": "^1.20.1",
-    "ics": "^3.1.0",
+    "csv-parse": "^5.4.0",
+    "date-fns": "^2.30.0",
+    "graphql": "^16.7.1",
+    "graphql-scalars": "^1.22.2",
+    "ics": "^3.2.0",
     "micro": "^9.4.1",
     "micro-cors": "^0.1.1",
-    "next": "^13.2.1",
-    "next-auth": "^4.19.2",
+    "next": "^13.4.9",
+    "next-auth": "^4.22.1",
     "next-pwa": "^5.6.0",
     "nexus": "^1.3.0",
-    "prisma": "^4.10.1",
-    "prosemirror-commands": "^1.5.0",
-    "prosemirror-dropcursor": "^1.7.0",
-    "prosemirror-gapcursor": "^1.3.1",
-    "prosemirror-history": "^1.3.0",
-    "prosemirror-keymap": "^1.2.1",
-    "prosemirror-schema-list": "^1.2.2",
+    "prisma": "^5.0.0",
+    "prosemirror-commands": "^1.5.2",
+    "prosemirror-dropcursor": "^1.8.1",
+    "prosemirror-gapcursor": "^1.3.2",
+    "prosemirror-history": "^1.3.2",
+    "prosemirror-keymap": "^1.2.2",
+    "prosemirror-schema-list": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
-    "react-hot-toast": "^2.4.0",
-    "react-icons": "^4.7.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
     "shepherd.js": "^11.1.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "@types/micro-cors": "^0.1.3",
-    "@types/node": "^20.3.0",
-    "@types/react": "^18.0.28",
+    "@types/node": "^20.4.1",
+    "@types/react": "^18.2.14",
     "@types/react-gtm-module": "^2.0.1",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.35.0",
-    "eslint-config-next": "^13.2.1",
-    "postcss": "^8.4.21",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.9",
+    "postcss": "^8.4.25",
     "prettier": "^3.0.0",
     "prettier-plugin-organize-imports": "^3.2.2",
     "prettier-plugin-tailwindcss": "^0.4.0",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.3",
-    "vitest": "^0.32.0"
+    "typescript": "^5.1.6",
+    "vitest": "^0.33.0"
   },
   "resolutions": {
     "prosemirror-model": "1.18.1",
