--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.17",
+    "@envelop/apollo-server-errors": "^5.0.0",
     "@headlessui/react": "^1.7.15",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/bundle-analyzer": "^13.4.9",
@@ -22,14 +23,12 @@
     "@tiptap/pm": "^2.0.3",
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
-    "apollo-server-micro": "^3.10.3",
     "csv-parse": "^5.4.0",
     "date-fns": "^2.30.0",
     "graphql": "^16.7.1",
     "graphql-scalars": "^1.22.2",
+    "graphql-yoga": "^4.0.3",
     "ics": "^3.2.0",
-    "micro": "^9.4.1",
-    "micro-cors": "^0.1.1",
     "next": "^13.4.9",
     "next-auth": "^4.22.1",
     "next-pwa": "^5.6.0",
@@ -50,7 +49,6 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
-    "@types/micro-cors": "^0.1.3",
     "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
     "@types/react-gtm-module": "^2.0.1",
