--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server and MongoDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=
+DATABASE_URL=postgresql://user:password@localhost:5432/lazy-uncle
 
 # GitHub OAuth
 GITHUB_ID=
