--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "next-pwa": "^5.6.0",
     "nexus": "^1.3.0",
     "prisma": "^5.7.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-gtm-module": "^2.0.11",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
