--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ GOOGLE_CLIENT_SECRET=
 NEXTAUTH_URL=http://localhost:3000/api/auth
 
 AUTH_SECRET=
+
+NEXT_PUBLIC_POSTHOG_KEY=
+NEXT_PUBLIC_POSTHOG_HOST="/ingest"
