--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-auth": "^4.24.5",
     "next-pwa": "^5.6.0",
     "nexus": "^1.3.0",
+    "posthog-js": "^1.136.8",
     "prisma": "^5.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
