--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.4",
+    "@arcjet/next": "^1.0.0-alpha.27",
     "@envelop/apollo-server-errors": "^6.0.0",
     "@headlessui/react": "^2.1.2",
     "@next-auth/prisma-adapter": "^1.0.7",
