--- a/package.json
+++ b/package.json
@@ -42,17 +42,17 @@
     "shepherd.js": "^14.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.10.7",
     "@types/react": "^19.0.7",
     "@types/react-gtm-module": "^2.0.4",
-    "autoprefixer": "^10.4.20",
     "eslint-config-next": "^15.1.4",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.10",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "vitest": "^3.0.1"
