--- a/package.json
+++ b/package.json
@@ -10,30 +10,32 @@
     "postinstall": "prisma generate",
     "test": "vitest run",
     "test:watch": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "out": "bun outdated",
+    "up": "bun update"
   },
   "dependencies": {
-    "@apollo/client": "^3.12.6",
+    "@apollo/client": "^3.12.8",
     "@envelop/apollo-server-errors": "^6.0.0",
     "@headlessui/react": "^2.2.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@next/bundle-analyzer": "^15.1.4",
-    "@prisma/client": "^6.2.1",
+    "@next/bundle-analyzer": "^15.1.6",
+    "@prisma/client": "^6.3.0",
     "@tailwindcss/forms": "^0.5.10",
-    "@tiptap/react": "^2.11.2",
-    "@tiptap/starter-kit": "^2.11.2",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
     "graphql": "^16.10.0",
-    "graphql-scalars": "^1.24.0",
-    "graphql-yoga": "^5.10.10",
+    "graphql-scalars": "^1.24.1",
+    "graphql-yoga": "^5.10.11",
     "ics": "^3.8.1",
-    "next": "^15.1.4",
+    "next": "^15.1.6",
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
     "nexus": "^1.3.0",
-    "posthog-js": "^1.207.0",
-    "prisma": "^6.2.1",
+    "posthog-js": "^1.215.1",
+    "prisma": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-gtm-module": "^2.0.11",
@@ -42,20 +44,20 @@
     "shepherd.js": "^14.4.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/postcss": "^4.0.3",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^22.10.7",
-    "@types/react": "^19.0.7",
+    "@types/node": "^22.13.0",
+    "@types/react": "^19.0.8",
     "@types/react-gtm-module": "^2.0.4",
-    "eslint-config-next": "^15.1.4",
+    "eslint-config-next": "^15.1.6",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.10",
-    "tailwindcss": "^4.0.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
-    "vitest": "^3.0.1"
+    "vitest": "^3.0.4"
   },
   "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
