--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install modules
-        run: bun i
+        run: bun install --frozen-lockfile
       - name: Run tests
         run: bun test
       - name: Test build
