--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,9 +4,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repo
+        uses: actions/checkout@v4
+      - name: Install bun
+        uses: oven-sh/setup-bun@v2
       - name: Install modules
-        run: bun install --frozen-lockfile
+        run: bun install
       - name: Run tests
         run: bun test
       - name: Test build
