--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "lazy-uncle",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "vitest run && next build",
+    "dev": "next dev --turbo",
+    "build": "vitest run && next build --turbo",
     "start": "next start",
     "lint": "next lint",
     "generate": "prisma generate",
