--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
+    "babel-plugin-react-compiler": "^19.1.0-rc.1",
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
     "graphql": "^16.11.0",
