--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
-    "babel-plugin-react-compiler": "^19.1.0-rc.1",
+    "babel-plugin-react-compiler": "^19.1.0-rc.1-rc-af1b7da-20250421",
     "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
     "graphql": "^16.11.0",
@@ -35,7 +35,7 @@
     "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
     "nexus": "^1.3.0",
-    "posthog-js": "^1.240.6",
+    "posthog-js": "^1.242.1",
     "prisma": "^6.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -47,7 +47,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.6",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^22.15.17",
+    "@types/node": "^22.15.18",
     "@types/react": "^19.1.4",
     "@types/react-gtm-module": "^2.0.4",
     "eslint-config-next": "^15.3.2",
