--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@apollo/client": "^3.14.0",
     "@envelop/apollo-server-errors": "^8.0.0",
     "@headlessui/react": "^2.2.7",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.14.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tiptap/react": "^3.3.0",
     "@tiptap/starter-kit": "^3.3.0",
     "babel-plugin-react-compiler": "^19.1.0-rc.1-rc-af1b7da-20250421",
+    "better-auth": "^1.3.7",
     "csv-parse": "^6.1.0",
     "date-fns": "^4.1.0",
     "graphql": "^16.11.0",
@@ -32,7 +32,6 @@
     "graphql-yoga": "^5.15.1",
     "ics": "^3.8.1",
     "next": "^15.5.0",
-    "next-auth": "^4.24.11",
     "next-pwa": "^5.6.0",
     "nexus": "^1.3.0",
     "posthog-js": "^1.260.2",
