--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,8 @@ GITHUB_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-NEXTAUTH_URL=http://localhost:3000/api/auth
-
-AUTH_SECRET=
+BETTER_AUTH_SECRET=
+BETTER_AUTH_URL=
 
 NEXT_PUBLIC_POSTHOG_KEY=
 NEXT_PUBLIC_POSTHOG_HOST="/ingest"
