--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@headlessui/react": "^2.2.7",
     "@prisma/client": "^6.14.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@testing-library/react": "^16.3.0",
     "@tiptap/react": "^3.3.0",
     "@tiptap/starter-kit": "^3.3.0",
+    "@types/nodemailer": "^7.0.1",
     "babel-plugin-react-compiler": "^19.1.0-rc.1-rc-af1b7da-20250421",
     "better-auth": "^1.3.7",
     "csv-parse": "^6.1.0",
@@ -34,6 +36,7 @@
     "next": "^15.5.2",
     "next-pwa": "^5.6.0",
     "nexus": "^1.3.0",
+    "nodemailer": "^7.0.5",
     "posthog-js": "^1.260.3",
     "prisma": "^6.14.0",
     "react": "^19.1.1",
@@ -46,9 +49,11 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/jest-dom": "^6.8.0",
     "@types/react": "^19.1.11",
     "@types/react-gtm-module": "^2.0.4",
     "eslint-config-next": "^15.5.2",
+    "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.2.0",
