fix eslint issues

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev --turbo",
     "build": "vitest run && next build --turbo",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "generate": "prisma generate",
     "postinstall": "prisma generate",
     "test": "vitest run",
@@ -45,11 +45,15 @@
     "shepherd.js": "^14.5.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.35.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.1.12",
     "@types/react-gtm-module": "^2.0.4",
+    "eslint": "^9.35.0",
     "eslint-config-next": "^15.5.2",
+    "eslint-config-prettier": "^10.1.8",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.2.0",
