Add submission links

--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,6 @@ BETTER_AUTH_SECRET=
 BETTER_AUTH_URL=
 
 NEXT_PUBLIC_POSTHOG_KEY=
-NEXT_PUBLIC_POSTHOG_HOST="/ingest"
+NEXT_PUBLIC_POSTHOG_HOST=/ingest
+
+RESEND_API_KEY=
