--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "vitest run && next build --turbo",
+    "build": "next build --turbo",
     "start": "next start",
     "lint": "eslint .",
     "generate": "prisma generate",
@@ -21,20 +21,23 @@
     "@headlessui/react": "^2.2.7",
     "@prisma/client": "^6.15.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@testing-library/react": "^16.3.0",
     "@tiptap/react": "^3.4.1",
     "@tiptap/starter-kit": "^3.4.1",
+    "@types/nodemailer": "^7.0.1",
     "babel-plugin-react-compiler": "^19.1.0-rc.1-rc-af1b7da-20250421",
     "better-auth": "^1.3.9",
     "clsx": "^2.1.1",
     "csv-parse": "^6.1.0",
     "date-fns": "^4.1.0",
-    "graphql": "^16.11.0",
     "graphql-scalars": "^1.24.2",
     "graphql-yoga": "^5.15.2",
+    "graphql": "^16.11.0",
     "ics": "^3.8.1",
-    "next": "^15.5.2",
     "next-pwa": "^5.6.0",
+    "next": "^15.5.2",
     "nexus": "^1.3.0",
+    "nodemailer": "^7.0.5",
     "posthog-js": "^1.261.8",
     "prisma": "^6.15.0",
     "react": "^19.1.1",
@@ -42,6 +45,7 @@
     "react-gtm-module": "^2.0.11",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "resend": "^6.0.3",
     "rxjs": "^7.8.2",
     "shepherd.js": "^14.5.1"
   },
@@ -50,11 +54,13 @@
     "@eslint/js": "^9.35.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/jest-dom": "^6.8.0",
     "@types/react": "^19.1.12",
     "@types/react-gtm-module": "^2.0.4",
     "eslint": "^9.35.0",
     "eslint-config-next": "^15.5.2",
     "eslint-config-prettier": "^10.1.8",
+    "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.2.0",
