--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "lazy-uncle",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build --turbo",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint .",
     "generate": "prisma generate",
