--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "next": "^16.0.1",
     "next-pwa": "^5.6.0",
     "nexus": "^1.3.0",
-    "posthog-js": "^1.291.0",
+    "posthog-js": "~1.292.0",
     "prisma": "^6.19.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -55,7 +55,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/typography": "^0.5.19",
     "@testing-library/jest-dom": "^6.9.1",
-    "@types/react": "^19.2.3",
+    "@types/react": "^19.2.4",
     "@types/react-gtm-module": "^2.0.4",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.1",
