--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "generate": "prisma generate",
-    "postinstall": "prisma generate",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
     "test": "vitest run",
     "test:watch": "vitest",
     "coverage": "vitest run --coverage",
@@ -19,7 +21,7 @@
     "@apollo/client": "^4.0.9",
     "@envelop/apollo-server-errors": "^9.0.0",
     "@headlessui/react": "^2.2.9",
-    "@prisma/client": "^6.19.0",
+    "@paralleldrive/cuid2": "^3.0.4",
     "@react-email/render": "^2.0.0",
     "@tailwindcss/forms": "^0.5.10",
     "@testing-library/react": "^16.3.0",
@@ -31,6 +33,7 @@
     "clsx": "^2.1.1",
     "csv-parse": "^6.1.0",
     "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.44.7",
     "graphql": "^16.12.0",
     "graphql-scalars": "^1.25.0",
     "graphql-yoga": "^5.16.2",
@@ -38,8 +41,9 @@
     "next": "^16.0.3",
     "next-pwa": "^5.6.0",
     "nexus": "^1.3.0",
+    "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "posthog-js": "^1.297.2",
-    "prisma": "^6.19.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-gtm-module": "^2.0.11",
@@ -55,8 +59,10 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@tailwindcss/typography": "^0.5.19",
     "@testing-library/jest-dom": "^6.9.1",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19.2.6",
     "@types/react-gtm-module": "^2.0.4",
+    "drizzle-kit": "^0.31.7",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.3",
     "eslint-config-prettier": "^10.1.8",
@@ -71,11 +77,8 @@
     "vitest": "^4.0.13"
   },
   "trustedDependencies": [
-    "@prisma/client",
-    "@prisma/engines",
     "@tailwindcss/oxide",
     "esbuild",
-    "prisma",
     "sharp"
   ]
 }
