--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/react": "^16.3.0",
     "@tiptap/react": "^3.11.0",
     "@tiptap/starter-kit": "^3.11.0",
+    "@trivago/prettier-plugin-sort-imports": "^6.0.0",
     "@types/nodemailer": "^7.0.4",
     "babel-plugin-react-compiler": "^19.1.0-rc.1-rc-af1b7da-20250421",
     "better-auth": "^1.3.34",
