--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-pwa": "^5.6.0",
     "nexus": "^1.3.0",
     "pg": "^8.17.2",
+    "pluralize": "^8.0.0",
     "posthog-js": "^1.335.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -61,6 +62,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "@testing-library/jest-dom": "^6.9.1",
     "@types/pg": "^8.16.0",
+    "@types/pluralize": "^0.0.33",
     "@types/react": "^19.2.9",
     "@types/react-gtm-module": "^2.0.4",
     "drizzle-kit": "^0.31.8",
