--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@tiptap/starter-kit": "^3.19.0",
     "@trivago/prettier-plugin-sort-imports": "^6.0.2",
     "@types/nodemailer": "^7.0.9",
-    "babel-plugin-react-compiler": "^19.1.0-rc.1-rc-af1b7da-20250421",
+    "babel-plugin-react-compiler": "^1.0.0",
     "better-auth": "^1.4.18",
     "clsx": "^2.1.1",
     "csv-parse": "^6.1.0",
@@ -52,11 +52,11 @@
     "react-icons": "^5.5.0",
     "resend": "^6.9.2",
     "rxjs": "^7.8.2",
-    "shepherd.js": "^14.5.1"
+    "shepherd.js": "^15.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
-    "@eslint/js": "^9.39.2",
+    "@eslint/js": "^10.0.1",
     "@faker-js/faker": "^10.3.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
@@ -66,10 +66,10 @@
     "@types/react": "^19.2.14",
     "@types/react-gtm-module": "^2.0.4",
     "drizzle-kit": "^0.31.9",
-    "eslint": "^9.39.2",
+    "eslint": "^10.0.0",
     "eslint-config-next": "^16.1.6",
     "eslint-config-prettier": "^10.1.8",
-    "jsdom": "^27.4.0",
+    "jsdom": "^28.0.0",
     "postcss": "^8.5.6",
     "prettier": "^3.8.1",
     "prettier-plugin-organize-imports": "^4.3.0",
