--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "shepherd.js": "^15.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.3",
     "@eslint/js": "^10.0.1",
     "@faker-js/faker": "^10.3.0",
     "@tailwindcss/postcss": "^4.1.18",
@@ -76,6 +75,7 @@
     "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.0",
     "vitest": "^4.0.18"
   },
   "trustedDependencies": [
