feat(notifications): add birthday reminder emails
Users can now opt in to receive an email on the day of each birthday.
A global toggle in Notification Preferences enables the feature; individual
birthdays have a per-entry opt-out checkbox defaulting to on.

- Add remindersEnabled (Birthday) and birthdayReminders (NotificationPreference)
  columns with migration 0002
- NotificationService.processUpcomingBirthdayReminders() queries today's
  birthdays for opted-in users and sends a reminder via SMTP or Resend
- SMTP transport (nodemailer) used when SMTP_HOST is set, falling back to
  Resend in production and console in dev
- Daily background job registered in BackgroundJobScheduler
- GraphQL schema, mutations, and client queries updated throughout
- SharingSettingsPanel gets a third toggle; Create/EditBirthdayForm get a
  "Remind me on their birthday" checkbox
- Fix save button never appearing for users with no preferences row yet
- Add Mailpit service to docker-compose and SMTP_* vars to .env.example
- Add scripts/send-birthday-reminders.ts + `bun run reminders:run` script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,9 @@ services:
       interval: 1s
       timeout: 5s
       retries: 10
+
+  mailpit:
+    image: axllent/mailpit
+    ports:
+      - "1025:1025"   # SMTP
+      - "8025:8025"   # Web UI
