--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "coverage": "vitest run --coverage",
     "out": "bun outdated",
     "up": "bun update",
-    "preinstall": "npx only-allow bun"
+    "preinstall": "npx only-allow bun",
+    "reminders:run": "bun scripts/send-birthday-reminders.ts"
   },
   "dependencies": {
     "@apollo/client": "^4.1.4",
@@ -42,6 +43,7 @@
     "next": "^16.1.6",
     "next-pwa": "^5.6.0",
     "nexus": "^1.3.0",
+    "nodemailer": "^8.0.1",
     "pg": "^8.18.0",
     "pluralize": "^8.0.0",
     "posthog-js": "^1.350.0",
