refactor(jobs): replace in-process scheduler with Dokploy-compatible scripts
The BackgroundJobScheduler used setInterval and was never imported by the
app — the auto-start code was dead. All scheduling is now handled externally
via Dokploy scheduled tasks, each running a standalone Bun script.

Removed:
- lib/background-jobs.ts (+ test files) — replaced by scripts below

Added scripts (+ package.json shortcuts):
- scripts/send-birthday-reminders.ts  → reminders:run
- scripts/send-daily-summaries.ts     → summaries:run   (new)
- scripts/cleanup-expired-links.ts    → cleanup:links   (new)
- scripts/cleanup-old-submissions.ts  → cleanup:submissions (new)

Moved processDailySummaryNotifications() into NotificationService with a
correct implementation (previous version in background-jobs passed placeholder
data; new one queries real pending submissions via sharingLinks).

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "out": "bun outdated",
     "up": "bun update",
     "preinstall": "npx only-allow bun",
-    "reminders:run": "bun scripts/send-birthday-reminders.ts"
+    "reminders:run": "bun scripts/send-birthday-reminders.ts",
+    "summaries:run": "bun scripts/send-daily-summaries.ts",
+    "cleanup:links": "bun scripts/cleanup-expired-links.ts",
+    "cleanup:submissions": "bun scripts/cleanup-old-submissions.ts"
   },
   "dependencies": {
     "@apollo/client": "^4.1.4",
